# hermes-module-basic

./: .gitignore  CMake.vars.example  CMakeLists.txt  CMakeMacros.txt  README.rst
cmake/: AddPythonLibrary.cmake  BuildAndInstallScripts.cmake  FindCython.cmake  FindEXODUSII.cmake  FindGLEW.cmake  FindGLUT.cmake  FindHDF5.cmake  FindHERMES.cmake  FindMUMPS.cmake  FindPETSC.cmake  FindPython.cmake  FindSUPERLU.cmake  FindTRILINOS.cmake  FindUMFPACK.cmake  cython_test.pyx
python/: CMakeLists.txt  basic.pyx  basic_defs.pxd  module-basic.py
src/: CMakeLists.txt  basic.cpp  basic.h  domain.mesh  domain.mesh.unused  main.cpp  model.cfg  module_basic.cpp  read_model_data.cpp
src/hermes_basic/: basic.cpp  basic.h  definitions.cpp  forms.cpp
src/hermes_basic_old/: basic.cpp  definitions.cpp
src/tests/: CMakeLists.txt  main.cpp  model.cfg
ui/css/: basic.css
ui/js/: 01-femhub.module.basic.window.ui.js  02-femhub.module.basic.js  module-basic.xds
